--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -13,15 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Software Craftsmanship | DevOps | ...
+title: Software Craftsmanship | DevOps | ... 
 #email: your-email@domain.com
 # description: > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
 #   Google search results) and in your feed.xml site description.
-
-baseurl: "/yakhyadabo"
-url: "http://yakhyadabo.github.io"
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://localhost:4000" # the base hostname & protocol for your site
 twitter_username: yakhyadabo
 github_username: yakhyadabo
 
