--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Java - Spring | Docker - Kubernetes - AWS
+title: Programming | DevOps | Cloud | Virtualisation
 #email: your-email@domain.com
 # description: > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
@@ -21,7 +21,7 @@ title: Java - Spring | Docker - Kubernetes - AWS
 #   Google search results) and in your feed.xml site description.
 
 baseurl: ""
-url: "http://yakhyadabo.github.io"
+url: "http://www.yakhyadabo.org"
 twitter_username: yakhyadabo
 github_username: yakhyadabo
 
