--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -13,19 +13,20 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Java - Spring | Docker - Kubernetes - AWS
+title: Programming | DevOps | Cloud | Virtualisation
 #email: your-email@domain.com
 # description: > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
 #   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000" # the base hostname & protocol for your site
+
+baseurl: ""
+url: "http://www.yakhyadabo.org"
 twitter_username: yakhyadabo
 github_username: yakhyadabo
 
 excerpt_separator: "<!--excerpt-->"
-
+  
 # Build settings
 sass:
   sass_dir: _sass
